feat(merchant,identity,customer): make the lifecycle states reachable, and enforce them (#48)
* wip(phase1): lifecycle, authorization and API credentials -- NOT MERGEABLE

Committed to preserve the work, not to ship it. 100 tests fail: see below.

Built and compiling:
- V17: merchant_status_history, customer_status_history, api_credentials,
  kyc_submissions, payment_method_tokens.detached_at, and a backfill
  activating merchants that predate the gate.
- Merchant.activate/suspend/close + rename, with a real state machine.
  merchant.activate() is cited twice in CLAUDE.md and did not exist.
- Customer.block/unblock, User.suspend/reactivate/close.
- AuthenticatedCaller now KEEPS the role instead of parsing and discarding
  it, so MERCHANT_USER is no longer identical to PLATFORM_ADMIN.
- MerchantStatusGate (declared in shared, implemented by merchant) and
  MerchantStatusFilter enforcing it on every non-GET /api/v1 write.
- API credentials end to end: issue/list/revoke, SHA-256 hashed secrets
  returned exactly once, and an ApiKeyAuthenticationFilter that mints a
  JWT-shaped principal so a key and a human are indistinguishable downstream.

WHY IT IS NOT MERGEABLE. The status gate works, and that is the problem:
registration produces PENDING_VERIFICATION, the gate refuses every write from
a non-ACTIVE merchant, and KYC -- the approval path -- is not built. A newly
registered merchant can therefore do nothing, forever. 84 of the failures are
"expected 201 but was 403" and they are the gate correctly refusing a merchant
that has no way to become active.

I shipped a lock with no key. The full suite is what caught it; every
compile passed and every unit test on the new aggregates passes.

The fork this needs a decision on is in the handover message.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* feat(merchant,identity,customer): make the lifecycle states reachable, and enforce them

The Phase 1 audit found the same defect in three places: a lifecy